fixed horizontal scroll

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,8 +20,6 @@ body {
   color: var(--main-color);
 
   background: #000;
-
-  width: fit-content;
 }
 
 .center {
